     non_illumina_data, false by default. If this argument is true, at a point
     of saving a final QC outcome for a lane an attempt to finalise
     library/plex-level QC outcomes is not made.
   - SeqQC QcOutcomes controller uses information about the manufacturer of
     the instrument the sequencing experiment was set up on when updating
     QC outcomes (see above).

release 74.0.2 (2025-02-20)
 - Replace mark docker image with mark golang executable from github,
   on ISG's docker image, for documentation publishing

release 74.0.1 (2024-12-17)
 - Fix perlbrew installation by installing libdevel-patchperl-perl in runner
 - Fixes/updates for lane-level RoboQC lane-level assessment:
    - Excluded study-specific lane-lane assessment in npg_qc::autoqc::check::review
      This helps to avoid uncertainty in evaluating lanes where samples belong to
      different studies at a price of not being able to perform study-specific
      evaluation of one-library lanes.
    - Updated the expression evaluator to allow for multiple types of
      result objects to be used in a single expression.

release 74.0.0 (2024-12-02)
 - npg_qc::autoqc::qc_store - changed loading of ORM classes into memory
   to on demand at run time.
 - Added lane-level assessment to RoboQC:
    - Extended npg_qc::Schema::Result::Review class to enable saving of
      sequencing (lane-level) QC outcomes to database
    - Extended npg_qc::autoqc::check::review to enable lane-level assessment
      and documented the new feature.
    - Made redundant 'qc_type' key of the 'robo' configuration.
    - Fixed a bug in creating a list of class names in
      npg_qc::autoqc::check::review.
      A list of names for result classes to be loaded was inferred
      from all criteria in the 'robo' section under consideration.
      Until now this did not pesent a problem since even when a number
      of different criteria sections were present in the study RoboQC